--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories{
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.github.ben-manes.versions'
 
 // Use `com.nerdery.umbrella.darkskyapikey` in gradle.properties or as a command line
