--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 buildscript {
-    ext.kotlin_version = '1.2.60'
+    ext.kotlin_version = '1.3.11'
     repositories {
       jcenter()
       google()
       maven { url 'https://oss.jfrog.org/libs-snapshot' }
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.1.3'
+    classpath 'com.android.tools.build:gradle:3.3.0'
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.15.0'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
   }
@@ -31,8 +31,8 @@ ext.darkSkyApiKey = project.hasProperty('com.nerdery.umbrella.darkskyapikey')?
     System.getenv('DARK_SKY_API_KEY')?:''
 
 android {
-  compileSdkVersion 27
-  buildToolsVersion '27.0.3'
+  compileSdkVersion 28
+  buildToolsVersion '28.0.3'
 
   signingConfigs {
     umbrella {
@@ -46,7 +46,7 @@ android {
   defaultConfig {
     applicationId "com.nerdery.umbrella"
     minSdkVersion 19
-    targetSdkVersion 27
+    targetSdkVersion 28
     versionCode 1
     versionName '1.0'
 
@@ -68,7 +68,7 @@ android {
 }
 
 ext {
-    SUPPORT_LIB_VERSION = "27.1.1"
+    SUPPORT_LIB_VERSION = "28.0.0"
     RETROFIT_VERSION = "2.3.0"
     OKHTTP_VERSION = "3.9.0"
     ROOM_VERSION = "1.1.1"
@@ -77,6 +77,7 @@ ext {
 
 dependencies {
   implementation "com.android.support:support-v4:$SUPPORT_LIB_VERSION"
+  implementation "com.android.support:exifinterface:$SUPPORT_LIB_VERSION"
   implementation "com.android.support:support-annotations:$SUPPORT_LIB_VERSION"
   implementation "com.android.support:appcompat-v7:$SUPPORT_LIB_VERSION"
   implementation "com.android.support:recyclerview-v7:$SUPPORT_LIB_VERSION"
@@ -85,7 +86,7 @@ dependencies {
 
   implementation "com.squareup.okhttp3:okhttp:$OKHTTP_VERSION"
   implementation "com.squareup.okhttp3:logging-interceptor:$OKHTTP_VERSION"
-  implementation "com.squareup.picasso:picasso:2.5.2"
+  implementation "com.squareup.picasso:picasso:2.71828"
   implementation "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
   implementation "com.squareup.retrofit2:converter-moshi:$RETROFIT_VERSION"
   implementation "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
