--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 buildscript {
-    ext.kotlin_version = '1.3.11'
+    ext.kotlin_version = '1.3.71'
     repositories {
       jcenter()
       google()
       maven { url 'https://oss.jfrog.org/libs-snapshot' }
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.3.0'
+    classpath 'com.android.tools.build:gradle:3.6.1'
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.15.0'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
   }
@@ -31,8 +31,7 @@ ext.darkSkyApiKey = project.hasProperty('com.nerdery.umbrella.darkskyapikey')?
     System.getenv('DARK_SKY_API_KEY')?:''
 
 android {
-  compileSdkVersion 28
-  buildToolsVersion '28.0.3'
+  compileSdkVersion 29
 
   signingConfigs {
     umbrella {
@@ -46,7 +45,7 @@ android {
   defaultConfig {
     applicationId "com.nerdery.umbrella"
     minSdkVersion 19
-    targetSdkVersion 28
+    targetSdkVersion 29
     versionCode 1
     versionName '1.0'
 
@@ -76,13 +75,13 @@ ext {
 }
 
 dependencies {
-  implementation "com.android.support:support-v4:$SUPPORT_LIB_VERSION"
-  implementation "com.android.support:exifinterface:$SUPPORT_LIB_VERSION"
-  implementation "com.android.support:support-annotations:$SUPPORT_LIB_VERSION"
-  implementation "com.android.support:appcompat-v7:$SUPPORT_LIB_VERSION"
-  implementation "com.android.support:recyclerview-v7:$SUPPORT_LIB_VERSION"
-  implementation "com.android.support:design:$SUPPORT_LIB_VERSION"
-  implementation "com.android.support:cardview-v7:$SUPPORT_LIB_VERSION"
+  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+  implementation 'androidx.exifinterface:exifinterface:1.1.0'
+  implementation 'androidx.annotation:annotation:1.1.0'
+  implementation 'androidx.appcompat:appcompat:1.1.0'
+  implementation 'androidx.recyclerview:recyclerview:1.1.0'
+  implementation 'com.google.android.material:material:1.1.0'
+  implementation 'androidx.cardview:cardview:1.0.0'
 
   implementation "com.squareup.okhttp3:okhttp:$OKHTTP_VERSION"
   implementation "com.squareup.okhttp3:logging-interceptor:$OKHTTP_VERSION"
@@ -92,7 +91,7 @@ dependencies {
   implementation "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
   implementation "com.squareup.retrofit2:adapter-rxjava2:$RETROFIT_VERSION"
 
-  implementation "io.reactivex.rxjava2:rxjava:2.1.8"
+  implementation "io.reactivex.rxjava2:rxjava:2.2.2"
   implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
 
   implementation "com.jakewharton.byteunits:byteunits:0.9.1"
@@ -102,8 +101,8 @@ dependencies {
 
   implementation "com.f2prateek.rx.preferences:rx-preferences:1.0.2"
 
-  implementation "android.arch.persistence.room:runtime:$ROOM_VERSION"
-  annotationProcessor "android.arch.persistence.room:compiler:$ROOM_VERSION"
+  implementation 'androidx.room:room-runtime:2.2.5'
+  annotationProcessor 'androidx.room:room-compiler:2.2.5'
 
   debugImplementation "com.facebook.stetho:stetho:$FACEBOOK_VERSION"
   debugImplementation "com.facebook.stetho:stetho-okhttp3:$FACEBOOK_VERSION"
@@ -111,5 +110,5 @@ dependencies {
   implementation 'com.yarolegovich:lovely-dialog:1.1.0'
 
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-  implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+  implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
