--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
 android.enableJetifier=true
 android.useAndroidX=true
-com.nerdery.umbrella.darkskyapikey=f72e779716a66f0d36641c3b7045eaf8
+com.nerdery.umbrella.darkskyapikey={apiKeyHere}
